# agg-brake-lite

./: DELIVERY_WORKFLOW_CN.md  FAQ.md  FEEDBACK_TEMPLATE.md  LAUNCH_CHECKLIST.md  LICENSE  PAYMENT_INSTRUCTIONS_CN.md  POST_TEMPLATES.md  README.md  RELEASE_NOTES_v0.1.0.md  SUPPORT_POLICY.md  VALIDATION_PLAYBOOK.md  VALIDATION_SCORECARD_TEMPLATE.md  pyproject.toml
examples/: basic_usage.py
examples/templates/: autogpt_example.py  crewai_example.py  langchain_example.py
scripts/: export_pilot_bundle.ps1  export_pilot_bundle.py  release_check.ps1  release_check.sh
src/agg_brake_lite/: __init__.py  core.py
src/agg_brake_lite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py  test_export_bundle.py
